--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>JS Game</title>
+    <title>Numero secretp JS</title>
 </head>
 
 <body>
@@ -20,9 +20,9 @@
             <div class="container__informacoes">
                 <div class="container__texto">
                     <h1>Adivinhe o <span class="container__texto-azul">numero secreto</span></h1>
-                    <p class="texto__paragrafo">Escolha um número entre 1 a 10</p>
+                    <p class="texto__paragrafo">Escolha um número entre 1 a 30</p>
                 </div>
-                <input type="number" min="1" max="10" class="container__input">
+                <input type="number" min="1" max="30" class="container__input">
                 <div class="chute container__botoes">
                     <button onclick="verificarChute()" class="container__botao">adivinhar</button>
                     <button onclick="reiniciarJogo()" id="reiniciar" class="container__botao" disabled>Novo jogo</button>
